OSLC4Net_SDK/OSLC4Net.Core.Query/Impl/OslcWhereParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 3.5
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// $ANTLR 3.5 ../Grammars/OslcWhere.g 2013-06-26 18:03:02

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 219
// Unreachable code detected.
#pragma warning disable 162
// Missing XML comment for publicly visible type or member 'Type_or_Member'
#pragma warning disable 1591
// CLS compliance checking will not be performed on 'type' because it is not visible from outside this assembly.
#pragma warning disable 3019


using System.Collections.Generic;
using Antlr.Runtime;
using Antlr.Runtime.Misc;


using Antlr.Runtime.Tree;
using RewriteRuleITokenStream = Antlr.Runtime.Tree.RewriteRuleTokenStream;

namespace  OSLC4Net.Core.Query.Impl
{
/******************************************************************************
 * Copyright (c) 2013 IBM Corporation.
 *
 * All rights reserved. This program and the accompanying materials
 * are made available under the terms of the Eclipse Public License v1.0
 * and Eclipse Distribution License v. 1.0 which accompanies this distribution.
 *
 * The Eclipse Public License is available at http://www.eclipse.org/legal/epl-v10.html
 * and the Eclipse Distribution License is available at
 * http://www.eclipse.org/org/documents/edl-v10.php.
 *
 * Contributors:
 *
 *    Steve Pitchke - initial API and implementation
 *******************************************************************************/
[System.CodeDom.Compiler.GeneratedCode("ANTLR", "3.5")]
[System.CLSCompliant(false)]
public partial class OslcWhereParser : Antlr.Runtime.Parser
{
	internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ALPHA_CHARS", "AND", "ASTERISK", "BOOLEAN", "CLOSE_BRACE", "CLOSE_CURLY_BRACE", "CLOSE_SQUARE_BRACE", "COMMA", "COMPOUND_TERM", "DECIMAL", "DIGIT", "DOT", "ECHAR", "EOL", "EQUAL", "GREATER", "GREATER_EQUAL", "IN_TERM", "IN_VALUES", "IRI_REF", "LANGED_VALUE", "LANGTAG", "LESS", "LESS_EQUAL", "MINUS", "NOT", "NOT_EQUAL", "OPEN_BRACE", "OPEN_CURLY_BRACE", "OPEN_SQUARE_BRACE", "OR", "PLUS", "PNAME_LN", "PNAME_NS", "PN_CHARS", "PN_CHARS_BASE", "PN_CHARS_U", "PN_LOCAL", "PN_PREFIX", "REFERENCE", "SEMICOLON", "SIMPLE_TERM", "STRING_LITERAL", "TERMS", "TYPED_VALUE", "WS", "' '", "' and '", "' in'"
	};
	public const int EOF=-1;
	public const int T__50=50;
	public const int T__51=51;
	public const int T__52=52;
	public const int ALPHA_CHARS=4;
	public const int AND=5;
	public const int ASTERISK=6;
	public const int BOOLEAN=7;
	public const int CLOSE_BRACE=8;
	public const int CLOSE_CURLY_BRACE=9;
	public const int CLOSE_SQUARE_BRACE=10;
	public const int COMMA=11;
	public const int COMPOUND_TERM=12;
	public const int DECIMAL=13;
	public const int DIGIT=14;
	public const int DOT=15;
	public const int ECHAR=16;
	public const int EOL=17;
	public const int EQUAL=18;
	public const int GREATER=19;
	public const int GREATER_EQUAL=20;
	public const int IN_TERM=21;
	public const int IN_VALUES=22;
	public const int IRI_REF=23;
	public const int LANGED_VALUE=24;
	public const int LANGTAG=25;
	public const int LESS=26;
	public const int LESS_EQUAL=27;
	public const int MINUS=28;
	public const int NOT=29;
	public const int NOT_EQUAL=30;
	public const int OPEN_BRACE=31;
	public const int OPEN_CURLY_BRACE=32;
	public const int OPEN_SQUARE_BRACE=33;
	public const int OR=34;
	public const int PLUS=35;
	public const int PNAME_LN=36;
	public const int PNAME_NS=37;
	public const int PN_CHARS=38;
	public const int PN_CHARS_BASE=39;
	public const int PN_CHARS_U=40;
	public const int PN_LOCAL=41;
	public const int PN_PREFIX=42;
	public const int REFERENCE=43;
	public const int SEMICOLON=44;
	public const int SIMPLE_TERM=45;
	public const int STRING_LITERAL=46;
	public const int TERMS=47;
	public const int TYPED_VALUE=48;
	public const int WS=49;

	public OslcWhereParser(ITokenStream input)
		: this(input, new RecognizerSharedState())
	{
	}
	public OslcWhereParser(ITokenStream input, RecognizerSharedState state)
		: base(input, state)
	{
		ITreeAdaptor treeAdaptor = default(ITreeAdaptor);
		CreateTreeAdaptor(ref treeAdaptor);
		TreeAdaptor = treeAdaptor ?? new CommonTreeAdaptor();
		OnCreated();
	}
	// Implement this function in your helper file to use a custom tree adaptor
	partial void CreateTreeAdaptor(ref ITreeAdaptor adaptor);

	private ITreeAdaptor adaptor;

	public ITreeAdaptor TreeAdaptor
	{
		get
		{
			return adaptor;
		}

		set
		{
			this.adaptor = value;
		}
	}

	public override string[] TokenNames { get { return OslcWhereParser.tokenNames; } }
	public override string GrammarFileName { get { return "../Grammars/OslcWhere.g"; } }


	    public OslcWhereParser(string where) :
			this(new CommonTokenStream(new OslcWhereLexer(new ANTLRStringStream(where))))
	    {
	    }

		public object Result
		{
			get { return oslc_where().Tree; }
		}


	partial void OnCreated();
	partial void EnterRule(string ruleName, int ruleIndex);
	partial void LeaveRule(string ruleName, int ruleIndex);

	#region Rules
	partial void EnterRule_oslc_where();
	partial void LeaveRule_oslc_where();
	// $ANTLR start "oslc_where"
	// ../Grammars/OslcWhere.g:47:1: oslc_where : compound_term ;
	[GrammarRule("oslc_where")]
	private AstParserRuleReturnScope<object, IToken> oslc_where()
	{
		EnterRule_oslc_where();
		EnterRule("oslc_where", 1);
		TraceIn("oslc_where", 1);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		AstParserRuleReturnScope<object, IToken> compound_term1 = default(AstParserRuleReturnScope<object, IToken>);

		try { DebugEnterRule(GrammarFileName, "oslc_where");
		DebugLocation(47, 1);
		try
		{
			// ../Grammars/OslcWhere.g:47:15: ( compound_term )
			DebugEnterAlt(1);
			// ../Grammars/OslcWhere.g:47:17: compound_term
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(47, 17);
			PushFollow(Follow._compound_term_in_oslc_where105);
			compound_term1=compound_term();
			PopFollow();

			adaptor.AddChild(root_0, compound_term1.Tree);

			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("oslc_where", 1);
			LeaveRule("oslc_where", 1);
			LeaveRule_oslc_where();
		}
		DebugLocation(48, 1);
		} finally { DebugExitRule(GrammarFileName, "oslc_where"); }
		return retval;

	}
	// $ANTLR end "oslc_where"

	partial void EnterRule_compound_term();
	partial void LeaveRule_compound_term();
	// $ANTLR start "compound_term"
	// ../Grammars/OslcWhere.g:50:1: compound_term : simple_term ( boolean_op simple_term )* -> ^( 'terms' simple_term ( simple_term )* ) ;
	[GrammarRule("compound_term")]
	private AstParserRuleReturnScope<object, IToken> compound_term()
	{
		EnterRule_compound_term();
		EnterRule("compound_term", 2);
		TraceIn("compound_term", 2);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		AstParserRuleReturnScope<object, IToken> simple_term2 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> boolean_op3 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> simple_term4 = default(AstParserRuleReturnScope<object, IToken>);

		RewriteRuleSubtreeStream stream_boolean_op=new RewriteRuleSubtreeStream(adaptor,"rule boolean_op");
		RewriteRuleSubtreeStream stream_simple_term=new RewriteRuleSubtreeStream(adaptor,"rule simple_term");
		try { DebugEnterRule(GrammarFileName, "compound_term");
		DebugLocation(50, 1);
		try
		{
			// ../Grammars/OslcWhere.g:50:15: ( simple_term ( boolean_op simple_term )* -> ^( 'terms' simple_term ( simple_term )* ) )
			DebugEnterAlt(1);
			// ../Grammars/OslcWhere.g:50:17: simple_term ( boolean_op simple_term )*
			{
			DebugLocation(50, 17);
			PushFollow(Follow._simple_term_in_compound_term116);
			simple_term2=simple_term();
			PopFollow();

			stream_simple_term.Add(simple_term2.Tree);
			DebugLocation(50, 29);
			// ../Grammars/OslcWhere.g:50:29: ( boolean_op simple_term )*
			try { DebugEnterSubRule(1);
			while (true)
			{
				int alt1=2;
				try { DebugEnterDecision(1, false);
				int LA1_1 = input.LA(1);

				if ((LA1_1==51))
				{
					alt1 = 1;
				}


				} finally { DebugExitDecision(1); }
				switch ( alt1 )
				{
				case 1:
					DebugEnterAlt(1);
					// ../Grammars/OslcWhere.g:50:31: boolean_op simple_term
					{
					DebugLocation(50, 31);
					PushFollow(Follow._boolean_op_in_compound_term120);
					boolean_op3=boolean_op();
					PopFollow();

					stream_boolean_op.Add(boolean_op3.Tree);
					DebugLocation(50, 42);
					PushFollow(Follow._simple_term_in_compound_term122);
					simple_term4=simple_term();
					PopFollow();

					stream_simple_term.Add(simple_term4.Tree);

					}
					break;

				default:
					goto loop1;
				}
			}

			loop1:
				;

			} finally { DebugExitSubRule(1); }



			{
			// AST REWRITE
			// elements: TERMS, simple_term, simple_term
			// token labels:
			// rule labels: retval
			// token list labels:
			// rule list labels:
			// wildcard labels:
			retval.Tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

			root_0 = (object)adaptor.Nil();
			// 50:57: -> ^( 'terms' simple_term ( simple_term )* )
			{
				DebugLocation(50, 60);
				// ../Grammars/OslcWhere.g:50:60: ^( 'terms' simple_term ( simple_term )* )
				{
				object root_1 = (object)adaptor.Nil();
				DebugLocation(50, 63);
				root_1 = (object)adaptor.BecomeRoot((object)adaptor.Create(TERMS, "TERMS"), root_1);

				DebugLocation(50, 71);
				adaptor.AddChild(root_1, stream_simple_term.NextTree());
				DebugLocation(50, 83);
				// ../Grammars/OslcWhere.g:50:83: ( simple_term )*
				while ( stream_simple_term.HasNext )
				{
					DebugLocation(50, 84);
					adaptor.AddChild(root_1, stream_simple_term.NextTree());

				}
				stream_simple_term.Reset();

				adaptor.AddChild(root_0, root_1);
				}

			}

			retval.Tree = root_0;
			}

			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("compound_term", 2);
			LeaveRule("compound_term", 2);
			LeaveRule_compound_term();
		}
		DebugLocation(51, 1);
		} finally { DebugExitRule(GrammarFileName, "compound_term"); }
		return retval;

	}
	// $ANTLR end "compound_term"

	partial void EnterRule_simple_term();
	partial void LeaveRule_simple_term();
	// $ANTLR start "simple_term"
	// ../Grammars/OslcWhere.g:53:1: simple_term : ( term | scoped_term );
	[GrammarRule("simple_term")]
	private AstParserRuleReturnScope<object, IToken> simple_term()
	{
		EnterRule_simple_term();
		EnterRule("simple_term", 3);
		TraceIn("simple_term", 3);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		AstParserRuleReturnScope<object, IToken> term5 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> scoped_term6 = default(AstParserRuleReturnScope<object, IToken>);

		try { DebugEnterRule(GrammarFileName, "simple_term");
		DebugLocation(53, 1);
		try
		{
			// ../Grammars/OslcWhere.g:53:15: ( term | scoped_term )
			int alt2=2;
			try { DebugEnterDecision(2, false);
			int LA2_1 = input.LA(1);

			if (((LA2_1>=PNAME_LN && LA2_1<=PNAME_NS)))
			{
				int LA2_2 = input.LA(2);

				if (((LA2_2>=EQUAL && LA2_2<=GREATER_EQUAL)||(LA2_2>=LESS && LA2_2<=LESS_EQUAL)||LA2_2==NOT_EQUAL||LA2_2==52))
				{
					alt2 = 1;
				}
				else if ((LA2_2==OPEN_CURLY_BRACE))
				{
					alt2 = 2;
				}
				else
				{
					NoViableAltException nvae = new NoViableAltException("", 2, 1, input, 2);
					DebugRecognitionException(nvae);
					throw nvae;
				}
			}
			else if ((LA2_1==ASTERISK))
			{
				int LA2_2 = input.LA(2);

				if (((LA2_2>=EQUAL && LA2_2<=GREATER_EQUAL)||(LA2_2>=LESS && LA2_2<=LESS_EQUAL)||LA2_2==NOT_EQUAL||LA2_2==52))
				{
					alt2 = 1;
				}
				else if ((LA2_2==OPEN_CURLY_BRACE))
				{
					alt2 = 2;
				}
				else
				{
					NoViableAltException nvae = new NoViableAltException("", 2, 2, input, 2);
					DebugRecognitionException(nvae);
					throw nvae;
				}
			}
			else
			{
				NoViableAltException nvae = new NoViableAltException("", 2, 0, input, 1);
				DebugRecognitionException(nvae);
				throw nvae;
			}
			} finally { DebugExitDecision(2); }
			switch (alt2)
			{
			case 1:
				DebugEnterAlt(1);
				// ../Grammars/OslcWhere.g:53:17: term
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(53, 17);
				PushFollow(Follow._term_in_simple_term153);
				term5=term();
				PopFollow();

				adaptor.AddChild(root_0, term5.Tree);

				}
				break;
			case 2:
				DebugEnterAlt(2);
				// ../Grammars/OslcWhere.g:53:24: scoped_term
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(53, 24);
				PushFollow(Follow._scoped_term_in_simple_term157);
				scoped_term6=scoped_term();
				PopFollow();

				adaptor.AddChild(root_0, scoped_term6.Tree);

				}
				break;

			}
			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("simple_term", 3);
			LeaveRule("simple_term", 3);
			LeaveRule_simple_term();
		}
		DebugLocation(54, 1);
		} finally { DebugExitRule(GrammarFileName, "simple_term"); }
		return retval;

	}
	// $ANTLR end "simple_term"

	partial void EnterRule_space();
	partial void LeaveRule_space();
	// $ANTLR start "space"
	// ../Grammars/OslcWhere.g:56:1: space : ' ' !;
	[GrammarRule("space")]
	private AstParserRuleReturnScope<object, IToken> space()
	{
		EnterRule_space();
		EnterRule("space", 4);
		TraceIn("space", 4);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken char_literal7 = default(IToken);

		object char_literal7_tree = default(object);
		try { DebugEnterRule(GrammarFileName, "space");
		DebugLocation(56, 21);
		try
		{
			// ../Grammars/OslcWhere.g:56:15: ( ' ' !)
			DebugEnterAlt(1);
			// ../Grammars/OslcWhere.g:56:17: ' ' !
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(56, 20);
			char_literal7=(IToken)Match(input,50,Follow._50_in_space177);

			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("space", 4);
			LeaveRule("space", 4);
			LeaveRule_space();
		}
		DebugLocation(56, 21);
		} finally { DebugExitRule(GrammarFileName, "space"); }
		return retval;

	}
	// $ANTLR end "space"

	partial void EnterRule_boolean_op();
	partial void LeaveRule_boolean_op();
	// $ANTLR start "boolean_op"
	// ../Grammars/OslcWhere.g:58:1: boolean_op : ' and ' !;
	[GrammarRule("boolean_op")]
	private AstParserRuleReturnScope<object, IToken> boolean_op()
	{
		EnterRule_boolean_op();
		EnterRule("boolean_op", 5);
		TraceIn("boolean_op", 5);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken string_literal8 = default(IToken);

		object string_literal8_tree = default(object);
		try { DebugEnterRule(GrammarFileName, "boolean_op");
		DebugLocation(58, 25);
		try
		{
			// ../Grammars/OslcWhere.g:58:15: ( ' and ' !)
			DebugEnterAlt(1);
			// ../Grammars/OslcWhere.g:58:17: ' and ' !
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(58, 24);
			string_literal8=(IToken)Match(input,51,Follow._51_in_boolean_op190);

			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("boolean_op", 5);
			LeaveRule("boolean_op", 5);
			LeaveRule_boolean_op();
		}
		DebugLocation(58, 25);
		} finally { DebugExitRule(GrammarFileName, "boolean_op"); }
		return retval;

	}
	// $ANTLR end "boolean_op"

	partial void EnterRule_term();
	partial void LeaveRule_term();
	// $ANTLR start "term"
	// ../Grammars/OslcWhere.g:60:1: term : ( term_simple | in_term );
	[GrammarRule("term")]
	private AstParserRuleReturnScope<object, IToken> term()
	{
		EnterRule_term();
		EnterRule("term", 6);
		TraceIn("term", 6);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		AstParserRuleReturnScope<object, IToken> term_simple9 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> in_term10 = default(AstParserRuleReturnScope<object, IToken>);

		try { DebugEnterRule(GrammarFileName, "term");
		DebugLocation(60, 29);
		try
		{
			// ../Grammars/OslcWhere.g:60:6: ( term_simple | in_term )
			int alt3=2;
			try { DebugEnterDecision(3, false);
			int LA3_1 = input.LA(1);

			if (((LA3_1>=PNAME_LN && LA3_1<=PNAME_NS)))
			{
				int LA3_2 = input.LA(2);

				if (((LA3_2>=EQUAL && LA3_2<=GREATER_EQUAL)||(LA3_2>=LESS && LA3_2<=LESS_EQUAL)||LA3_2==NOT_EQUAL))
				{
					alt3 = 1;
				}
				else if ((LA3_2==52))
				{
					alt3 = 2;
				}
				else
				{
					NoViableAltException nvae = new NoViableAltException("", 3, 1, input, 2);
					DebugRecognitionException(nvae);
					throw nvae;
				}
			}
			else if ((LA3_1==ASTERISK))
			{
				int LA3_2 = input.LA(2);

				if (((LA3_2>=EQUAL && LA3_2<=GREATER_EQUAL)||(LA3_2>=LESS && LA3_2<=LESS_EQUAL)||LA3_2==NOT_EQUAL))
				{
					alt3 = 1;
				}
				else if ((LA3_2==52))
				{
					alt3 = 2;
				}
				else
				{
					NoViableAltException nvae = new NoViableAltException("", 3, 2, input, 2);
					DebugRecognitionException(nvae);
					throw nvae;
				}
			}
			else
			{
				NoViableAltException nvae = new NoViableAltException("", 3, 0, input, 1);
				DebugRecognitionException(nvae);
				throw nvae;
			}
			} finally { DebugExitDecision(3); }
			switch (alt3)
			{
			case 1:
				DebugEnterAlt(1);
				// ../Grammars/OslcWhere.g:60:8: term_simple
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(60, 8);
				PushFollow(Follow._term_simple_in_term200);
				term_simple9=term_simple();
				PopFollow();

				adaptor.AddChild(root_0, term_simple9.Tree);

				}
				break;
			case 2:
				DebugEnterAlt(2);
				// ../Grammars/OslcWhere.g:60:22: in_term
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(60, 22);
				PushFollow(Follow._in_term_in_term204);
				in_term10=in_term();
				PopFollow();

				adaptor.AddChild(root_0, in_term10.Tree);

				}
				break;

			}
			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("term", 6);
			LeaveRule("term", 6);
			LeaveRule_term();
		}
		DebugLocation(60, 29);
		} finally { DebugExitRule(GrammarFileName, "term"); }
		return retval;

	}
	// $ANTLR end "term"

	partial void EnterRule_term_simple();
	partial void LeaveRule_term_simple();
	// $ANTLR start "term_simple"
	// ../Grammars/OslcWhere.g:62:1: term_simple : identifier_wc comparison_op value -> ^( 'simple_term' identifier_wc comparison_op value ) ;
	[GrammarRule("term_simple")]
	private AstParserRuleReturnScope<object, IToken> term_simple()
	{
		EnterRule_term_simple();
		EnterRule("term_simple", 7);
		TraceIn("term_simple", 7);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		AstParserRuleReturnScope<object, IToken> identifier_wc11 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> comparison_op12 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> value13 = default(AstParserRuleReturnScope<object, IToken>);

		RewriteRuleSubtreeStream stream_value=new RewriteRuleSubtreeStream(adaptor,"rule value");
		RewriteRuleSubtreeStream stream_identifier_wc=new RewriteRuleSubtreeStream(adaptor,"rule identifier_wc");
		RewriteRuleSubtreeStream stream_comparison_op=new RewriteRuleSubtreeStream(adaptor,"rule comparison_op");
		try { DebugEnterRule(GrammarFileName, "term_simple");
		DebugLocation(62, 1);
		try
		{
			// ../Grammars/OslcWhere.g:63:2: ( identifier_wc comparison_op value -> ^( 'simple_term' identifier_wc comparison_op value ) )
			DebugEnterAlt(1);
			// ../Grammars/OslcWhere.g:63:4: identifier_wc comparison_op value
			{
			DebugLocation(63, 4);
			PushFollow(Follow._identifier_wc_in_term_simple214);
			identifier_wc11=identifier_wc();
			PopFollow();
